--- a/templates/game.html
+++ b/templates/game.html
@@ -6,7 +6,7 @@
             table {
                 border-collapse: collapse;
                 margin-left: auto;
-                margin-right:auto;
+                margin-right: auto;
             }
             td {
                 border: 1px solid black;
@@ -14,6 +14,9 @@
                 height: 150px;
                 font-size: 30px;
                 text-align: center;
+            }
+            td:hover {
+                box-shadow: 0 0 10px black;
             }
             td > a {
                 font-size: 18px;
